# rootcauseanalysisagent

./: .gitignore  README.md  README.md.1  README.md.2  README.md.3  README.md.4  README.md.5  README.md.6  README.md.7  analyze.py  analyze1.py  pyproject.toml  requirements.txt  run.sh  run1.sh
config/: config.yaml  logging.yaml
reports/20260722_120502/: metadata.json  report.json  summary.md
reports/20260722_121901/: metadata.json  report.json  summary.md
reports/20260722_122259/: metadata.json  report.json  summary.md
reports/20260722_140559/: metadata.json  report.json  summary.md
reports/20260722_142157/: metadata.json  report.json  summary.md
reports/20260722_142700/: metadata.json  report.json  summary.md
reports/20260722_150943/: metadata.json  report.json  summary.md
reports/20260722_151253/: metadata.json  report.json  summary.md
reports/20260722_154637/: metadata.json  report.json  summary.md
reports/20260722_155523/: metadata.json  report.json  summary.md
reports/20260722_160401/: metadata.json
reports/20260722_160442/: metadata.json  report.json  summary.md
reports/20260722_160929/: metadata.json  report.json  summary.md
reports/20260722_160954/: metadata.json  report.json  summary.md
reports/20260722_161012/: metadata.json  report.json  summary.md
src/analyzer/: analyzer.py  correlation.py  evidence.py  evidence_weights.py  failure_category_analyzer.py  models.py  rootcause_engine.py  rules.py  scoring.py
src/app/: main.py  pipeline.py
src/core/: config.py  constants.py  logger.py
src/detector/: models.py  pattern_detector.py  signatures.py
src/discovery/: log_discovery.py
src/parser/: base_parser.py  (+4 more)
tests/: 01_test_recursive_extractor.py  02_test_log_discovery.py  03_test_log_parser.py  04_test_pattern_detector.py  05_test_timeline_builder.py  06_test_rootcause_engine.py  07_test_report_generator.py  08_test_pipeline.py  09_test_failure_category_analyzer.py  10_test_signature_coverage.py  test_recursive_extractor.py
(+633 files in other folders)
