[project]
name = "rootcauseanalysisagent"
version = "0.1.0"
description = "AI assisted log root cause analysis agent"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5,<9.0.0",
    "pytest-cov>=6.1.1,<7.0.0",
    "black>=25.1.0,<26.0.0",
    "isort>=6.0.1,<7.0.0",
    "flake8>=7.2.0,<8.0.0",
    "mypy>=1.15.0,<2.0.0"
]

dependencies = [
    "openai>=1.50.0,<3.0.0",
    "PyYAML>=6.0.2,<7.0.0",
    "pandas>=2.2.3,<3.0.0",
    "rich>=14.0.0,<15.0.0",
    "tqdm>=4.67.1,<5.0.0"
]


[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]


[tool.black]
line-length = 100


[tool.isort]
profile = "black"
line_length = 100


[tool.pytest.ini_options]
testpaths = [
    "tests"
]

pythonpath = [
    "src"
]


[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
